# geombd_crtp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  run.sh
data/: HRP2-1.xbot  HRP2.xml  NAOURDF.xml  NAOURDF_SixDoF.xml  NAOURDF_inertial.urdf  NAOURDF_inertial.xml  NAOURDF_inertial_XYZ.urdf  NAOURDF_inertial_Z.urdf  NAOURDF_inertial_ext.xml  NAOURDF_inertial_rev.xml  NAOURDF_virtualbodies.urdf  Nao_blue_noninertial.xbot  kukaYoubot.urdf  kukaYoubot.xml  nao.urdf  nao_inertial_python.urdf  planar_2dof.urdf  planar_2dof_python.urdf
data/TROmodels/: HRP2.urdf  atlas.urdf  lwr.urdf  nao_inertial_XYZ_python.urdf  nao_inertial_Z_python.urdf  nao_inertial_python.urdf
data/models/: featherstone_01.urdf  featherstone_02.urdf
examples/: CMakeLists.txt  example_CRTP_05.cpp  example_CRTP_06.cpp  example_FwdDyn.cpp  example_FwdDynDiff.cpp  example_FwdDyn_plus_Diff.cpp  example_inv_H.cpp  example_parser.cpp
examples_static/: CMakeLists.txt  run.sh
examples_static/examples/: CMakeLists.txt  example_D_FD.cpp  example_D_FD_atlas.cpp  example_D_FD_hrp2.cpp  example_D_FD_lwr.cpp  example_D_FD_nao.cpp  example_FD.cpp  example_FD_atlas.cpp  example_FD_hrp2.cpp  example_FD_lwr.cpp  example_FD_nao.cpp  example_FwdDyn.cpp  example_FwdDynDiff.cpp
include/geombd/: XprHelper.h
include/geombd/CRTP/: DForwardDynamicsCRTP.hpp  DJointBase.hxx  ForwardDynamicsCRTP.hpp  JointBase.hxx
include/geombd/CRTP/DJointDerived/: DJointDerived.hpp  DJointTypeRx.hxx  DJointTypeRxyz.hxx  DJointTypeRy.hxx  DJointTypeRz.hxx  DVisitors.hxx
include/geombd/CRTP/JointDerived/: JointDerived.hpp  JointTypeRx.hxx  JointTypeRxyz.hxx  JointTypeRy.hxx  JointTypeRz.hxx  Visitors.hxx
include/geombd/CRTP/traits/: GeoOperator  geoOperator.h
include/geombd/CRTP/utils/: functors.hxx  sincos.hxx
include/geombd/io/: CMakeLists.txt  parser.cpp  parser.hpp
include/geombd/pinocchio/container/: aligned-vector.hpp
